filter word back

--- a/catalog.html
+++ b/catalog.html
@@ -223,7 +223,7 @@
         </header>
         <section class="content-filter wrap">
             <details class="filter-box-menu filter-container button-pointer">
-                <summary class="filter-by-type">
+                <summary class="filter-by-type">FILTER
                     <svg class="menu-svg-margin" width="15" height="10" viewBox="0 0 15 10" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path class="menu-svg"
