--- a/catalog.html
+++ b/catalog.html
@@ -223,7 +223,7 @@
         </header>
         <section class="content-filter wrap">
             <details class="filter-box-menu filter-container button-pointer">
-                <summary class="filter-by-type">FILTER
+                <summary class="filter-by-type"><span class="filter-word">FILTER</span>
                     <svg class="menu-svg-margin" width="15" height="10" viewBox="0 0 15 10" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path class="menu-svg"
@@ -266,7 +266,7 @@
                         </svg>
                     </summary>
                 </details>
-                <details class="filter-margin size-container button-pointer">
+                <details class="size-container button-pointer">
                     <summary class="size-filter text-decor-catalog">SIZE
                         <svg class="catalog-svg" width="11" height="6" viewBox="0 0 11 6" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -287,7 +287,7 @@
                     </div>
 
                 </details>
-                <details class="filter-margin button-pointer">
+                <details class="button-pointer">
                     <summary class="price-filter text-decor-catalog">PRICE
                         <svg class="catalog-svg" width="11" height="6" viewBox="0 0 11 6" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
