product adaptive release

--- a/product.html
+++ b/product.html
@@ -240,18 +240,18 @@
         </section>
         <section class="content-description">
             <div class="content-description-wrap wrap">
-                <p class="content-desctription__title">WOMEN COLLECTION</p>
-                <hr class="content-desctription__title_line">
-                <p class="content-desctription-name_item">MOSCHINO CHEAP AND CHIC</p>
-                <p class="content-desctription-name_item-deskription">Compellingly actualize fully researched processes
+                <p class="content-description__title">WOMEN COLLECTION</p>
+                <hr class="content-description__title_line">
+                <p class="content-description-name_item">MOSCHINO CHEAP AND CHIC</p>
+                <p class="content-description-name_item-deskription">Compellingly actualize fully researched processes
                     before proactive outsourcing. Progressively syndicate collaborative architectures before
                     cutting-edge services. Completely visualize parallel core competencies rather than exceptional
                     portals.</p>
-                <p class="content-desctription__item-price">$561</p>
-                <hr class="content-desctription__content-line">
-                <div class="content-filer-item">
+                <p class="content-description__item-price">$561</p>
+                <hr class="content-description__content-line">
+                <div class="content-filter-item">
                     <details>
-                        <summary class="trending-filter text-decor-catalog">CHOOSE COLOR
+                        <summary class="trending-filter text-decor-catalog text-decor-catalog-product">CHOOSE COLOR
                             <svg class="catalog-svg" width="11" height="6" viewBox="0 0 11 6" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -261,7 +261,7 @@
                         </summary>
                     </details>
                     <details>
-                        <summary class="trending-filter text-decor-catalog">CHOOSE SIZE
+                        <summary class="trending-filter text-decor-catalog text-decor-catalog-product">CHOOSE SIZE
                             <svg class="catalog-svg" width="11" height="6" viewBox="0 0 11 6" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -271,7 +271,7 @@
                         </summary>
                     </details>
                     <details>
-                        <summary class="trending-filter text-decor-catalog">QUAINITY
+                        <summary class="trending-filter text-decor-catalog text-decor-catalog-product">QUAINITY
                             <svg class="catalog-svg" width="11" height="6" viewBox="0 0 11 6" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -294,8 +294,8 @@
         <div class="goods goods-margin-top">
             <div class="goods-wrap wrap">
                 <div class="item-content">
-                    <div class="card-block card-block_bottom-padding">
-                        <figure class="item-card">
+                    <div class="card-block card-block-product card-block_bottom-padding card-block_bottom-padding-product">
+                        <figure class="item-card item-card-product">
                             <img class="item-card__image" src="./img/itemicons/item-4.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
@@ -320,7 +320,7 @@
                             </figcaption>
                         </figure>
 
-                        <figure class="item-card">
+                        <figure class="item-card item-card-product">
                             <img class="item-card__image" src="./img/itemicons/item-3.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
@@ -345,7 +345,7 @@
                             </figcaption>
                         </figure>
 
-                        <figure class="item-card">
+                        <figure class="item-card item-card-product">
                             <img class="item-card__image" src="./img/itemicons/item-14.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
