registation adaptive release

--- a/registration.html
+++ b/registration.html
@@ -232,6 +232,8 @@
                         <label class="registration-form__gender_article" for="male">Male</label>
                         <input type="radio" name="gender" id="female" />
                         <label class="registration-form__gender_article" for="female">Female</label>
+                        <input type="radio" name="gender" id="Other" />
+                        <label class="registration-form__gender_article" for="Other">Other</label>
                     </div>
                     <div class="registration-form__login-data-block">
                         <p class="registration-form_title">Login Details</p>
