--- a/cart.html
+++ b/cart.html
@@ -210,13 +210,15 @@
                     </div>
                 </div>
             </nav>
+        </header>
+        <article>
             <div class="arrival">
                 <div class="arrival-wrap wrap">
-                    <p class="arrival-article">SHOPPING CART</p>
+                    <h1 class="arrival-article">SHOPPING CART</h1>
                 </div>
             </div>
-        </header>
-        <section class="payment-page">
+        </article>
+        <div class="payment-page">
             <div class="payment-page-wrap wrap">
                 <div class="cart-items">
                     <div class="cart-items__item-card cart-items__item-card_margin_bw-cards">
@@ -246,7 +248,7 @@
                                     <p class="cart-items__item-card__info_title">Quainity:</p>
                                     <input type="number"
                                         class="cart-items__item-card__info_text cart-items__item-card__info_text_quainity"
-                                        value="2" required></input>
+                                        value="2" required>
                                 </div>
                             </div>
                             <button class="cart-items__item-card__info_delete-button button-pointer_cross">
@@ -286,7 +288,7 @@
                                     <p class="cart-items__item-card__info_title">Quainity:</p>
                                     <input type="number"
                                         class="cart-items__item-card__info_text cart-items__item-card__info_text_quainity"
-                                        value="2" required></input>
+                                        value="2" required>
                                 </div>
                             </div>
                             <button class="cart-items__item-card__info_delete-button button-pointer_cross">
@@ -335,7 +337,7 @@
                     </div>
                 </form>
             </div>
-        </section>
+        </div>
     </main>
     <aside>
         <div class="feedback">
