--- a/catalog.html
+++ b/catalog.html
@@ -210,9 +210,11 @@
                     </div>
                 </div>
             </nav>
+        </header>
+        <article>
             <div class="arrival">
                 <div class="arrival-wrap wrap">
-                    <p class="arrival-article">NEW ARIVALS</p>
+                    <h1 class="arrival-article">NEW ARIVALS</h1>
                     <nav class="map">
                         <a class="map-item text-highlighter" href="#">HOME /</a>
                         <a class="map-item text-highlighter" href="#">MEN /</a>
@@ -220,8 +222,8 @@
                     </nav>
                 </div>
             </div>
-        </header>
-        <section class="content-filter wrap">
+        </article>
+        <div class="content-filter wrap">
             <details class="filter-box-menu filter-container button-pointer">
                 <summary class="filter-by-type"><span class="filter-word">FILTER</span>
                     <svg class="menu-svg-margin" width="15" height="10" viewBox="0 0 15 10" fill="none"
@@ -276,14 +278,14 @@
                         </svg>
                     </summary>
                     <div class="size-box">
-                        <div class="xs-size"><input id="xs-size" type="checkbox"> <label for="xs-size"
-                                class="label-checkbox button-pointer" id="xs-size">XS</label></div>
-                        <div class="s-size"><input id="s-size" type="checkbox"> <label for="s-size"
-                                class="label-checkbox button-pointer" id="s-size">S</label></div>
-                        <div class="m-size"><input id="m-size" type="checkbox"> <label for="m-size"
-                                class="label-checkbox button-pointer" id="m-size">M</label></div>
-                        <div class="l-size"><input id="l-size" type="checkbox"> <label for="l-size"
-                                class="label-checkbox button-pointer" id="l-size">L</label></div>
+                        <div class=""><input id="xs-size" type="checkbox"> <label for="xs-size"
+                                class="label-checkbox button-pointer">XS</label></div>
+                        <div class=""><input id="s-size" type="checkbox"> <label for="s-size"
+                                class="label-checkbox button-pointer">S</label></div>
+                        <div class=""><input id="m-size" type="checkbox"> <label for="m-size"
+                                class="label-checkbox button-pointer">M</label></div>
+                        <div class=""><input id="l-size" type="checkbox"> <label for="l-size"
+                                class="label-checkbox button-pointer">L</label></div>
                     </div>
 
                 </details>
@@ -298,7 +300,7 @@
                     </summary>
                 </details>
             </div>
-        </section>
+        </div>
         <div class="goods">
             <div class="goods-wrap wrap">
                 <div class="item-content">
