--- a/product.html
+++ b/product.html
@@ -210,9 +210,11 @@
                     </div>
                 </div>
             </nav>
+        </header>
+        <article>
             <div class="arrival">
                 <div class="arrival-wrap wrap">
-                    <p class="arrival-article text-highlighter">NEW ARIVALS</p>
+                    <h1 class="arrival-article text-highlighter">NEW ARIVALS</h1>
                     <nav class="map">
                         <a class="map-item text-highlighter" href="#">HOME /</a>
                         <a class="map-item text-highlighter" href="#">MEN /</a>
@@ -220,8 +222,8 @@
                     </nav>
                 </div>
             </div>
-        </header>
-        <section class="content-item">
+        </article>
+        <div class="content-item">
             <svg class="content-arrow_left content-arrow-icon" width="47" height="47" viewBox="0 0 47 47" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M47 0H0V47H47V0Z" fill="black" fill-opacity="0.15" />
@@ -237,8 +239,8 @@
             <div class="content-item-wrap wrap">
                 <img width="597" height="724" src="./img/itemicons/item-13.png" alt="item-13">
             </div>
-        </section>
-        <section class="content-description">
+        </div>
+        <div class="content-description">
             <div class="content-description-wrap wrap">
                 <p class="content-description__title">WOMEN COLLECTION</p>
                 <hr class="content-description__title_line">
@@ -290,7 +292,7 @@
                     Add to cart
                 </button>
             </div>
-        </section>
+        </div>
         <div class="goods goods-margin-top">
             <div class="goods-wrap wrap">
                 <div class="item-content">
