--- a/registration.html
+++ b/registration.html
@@ -12,7 +12,6 @@
     <script src="https://kit.fontawesome.com/f7d8d86aec.js" crossorigin="anonymous"></script>
     <title>Registration</title>
     <link rel="shortcut icon" href="img/title-logo.png" type="image/x-icon">
-    <script type="text/javascript" src="javascript.js"></script>
 </head>
 
 <body>
@@ -211,13 +210,15 @@
                     </div>
                 </div>
             </nav>
+        </header>
+        <article>
             <div class="arrival">
                 <div class="arrival-wrap wrap">
-                    <p class="arrival-article">REGISTRATION</p>
+                    <h1 class="arrival-article">REGISTRATION</h1>
                 </div>
             </div>
-        </header>
-        <section class="registration-page">
+        </article>
+        <div class="registration-page">
             <div class="registration-page-wrap wrap">
                 <form action="#" class="registration-form">
                     <div class="registration-form__names-block">
@@ -274,7 +275,7 @@
                     </ul>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
     <aside>
         <div class="feedback">
