delete excess img, fix mobile wrap, rename img folders

--- a/cart.html
+++ b/cart.html
@@ -222,7 +222,7 @@
             <div class="payment-page-wrap wrap">
                 <div class="cart-items">
                     <div class="cart-items__item-card cart-items__item-card_margin_bw-cards">
-                        <img class="cart-items__item-card_image" width="262" height="306" src="./img/itemicons/item-3.jpg" alt="T-Shirt">
+                        <img class="cart-items__item-card_image" width="262" height="306" src="./img/product-cards/item-3.jpg" alt="T-Shirt">
                         <div class="cart-items__item-card__info">
                             <p class="cart-items__item-card__info_name">MANGO PEOPLE T-SHIRT</p>
 
@@ -262,7 +262,7 @@
                         </div>
                     </div>
                     <div class="cart-items__item-card cart-items__item-card_margin_bot">
-                        <img class="cart-items__item-card_image" width="262" height="306" src="./img/itemicons/item-7.jpg" alt="T-Shirt">
+                        <img class="cart-items__item-card_image" width="262" height="306" src="./img/product-cards/item-7.jpg" alt="T-Shirt">
                         <div class="cart-items__item-card__info">
                             <p class="cart-items__item-card__info_name">MANGO PEOPLE T-SHIRT</p>
 
@@ -340,10 +340,10 @@
         </div>
     </main>
     <aside>
-        <div class="feedback">
-            <div class="feedback-wrap wrap">
+        <div class="feedback-block">
+            <div class="feedback-block-wrap wrap">
                 <div class="opinion">
-                    <img width="97" height="97" src="./img/content/statement.png" alt="opinion statement">
+                    <img width="97" height="97" src="./img/advantages-block/statement.png" alt="opinion statement">
                     <p class="opinion-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                             class="opinion-italic">a pulvinar purus
                             condimentum</span>“</p>
