--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <div class="item-content">
                     <div class="card-block">
                         <figure class="item-card">
-                            <img class="item-card__image" src="./img/itemicons/item-1.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-1.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -297,7 +297,7 @@
                         </figure>
 
                         <figure class="item-card">
-                            <img class="item-card__image" src="./img/itemicons/item-2.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-2.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -322,7 +322,7 @@
                         </figure>
 
                         <figure class="item-card">
-                            <img class="item-card__image" src="./img/itemicons/item-3.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-3.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -347,7 +347,7 @@
                         </figure>
 
                         <figure class="item-card">
-                            <img class="item-card__image" src="./img/itemicons/item-4.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-4.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -372,7 +372,7 @@
                         </figure>
 
                         <figure class="item-card">
-                            <img class="item-card__image" src="./img/itemicons/item-5.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-5.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -397,7 +397,7 @@
                         </figure>
 
                         <figure class="item-card">
-                            <img class="item-card__image" src="./img/itemicons/item-6.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-6.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -432,29 +432,29 @@
         <div class="advantages">
             <div class="advantages-wrap wrap">
                 <div class="advantages-item">
-                    <img class="advantages-icon" src="./img/content/delivery.png" alt="delivery">
+                    <img class="advantages-icon" src="./img/advantages-block/delivery.png" alt="delivery">
                     <h2 class="advantages-head">Free Delivery</h2>
                     <p class="advantages-text">Worldwide delivery on all. Authorit tively morph next-generation innov
                         tion with extensive models.</p>
                 </div>
                 <div class="advantages-item">
-                    <img class="advantages-icon" src="./img/content/sales.png" alt="delivery">
+                    <img class="advantages-icon" src="./img/advantages-block/sales.png" alt="delivery">
                     <h2 class="advantages-head">Sales & discounts</h2>
                     <p class="advantages-text">Worldwide delivery on all. Authorit tively morph next-generation innov
                         tion with extensive models.</p>
                 </div>
                 <div class="advantages-item">
-                    <img class="advantages-icon" src="./img/content/quality.png" alt="delivery">
+                    <img class="advantages-icon" src="./img/advantages-block/quality.png" alt="delivery">
                     <h2 class="advantages-head">Quality Assuranse</h2>
                     <p class="advantages-text">Worldwide delivery on all. Authorit tively morph next-generation innov
                         tion with extensive models.</p>
                 </div>
             </div>
         </div>
-        <div class="feedback">
-            <div class="feedback-wrap wrap">
+        <div class="feedback-block">
+            <div class="feedback-block-wrap wrap">
                 <div class="opinion">
-                    <img width="97" height="97" src="./img/content/statement.png" alt="opinion statement">
+                    <img width="97" height="97" src="./img/advantages-block/statement.png" alt="opinion statement">
                     <p class="opinion-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                             class="opinion-italic">a pulvinar purus
                             condimentum</span>“</p>
