--- a/product.html
+++ b/product.html
@@ -237,7 +237,7 @@
                     d="M17.2998 31.2499L25.0498 23.4999L17.2998 15.7499L18.8498 12.6499L29.6998 23.4999L18.8498 34.3499L17.2998 31.2499Z" />
             </svg>
             <div class="content-item-wrap wrap">
-                <img width="597" height="724" src="./img/itemicons/item-13.png" alt="item-13">
+                <img width="597" height="724" src="./img/product-cards/item-13.png" alt="item-13">
             </div>
         </div>
         <div class="content-description">
@@ -298,7 +298,7 @@
                 <div class="item-content">
                     <div class="card-block card-block-product card-block_bottom-padding card-block_bottom-padding-product">
                         <figure class="item-card item-card-product">
-                            <img class="item-card__image" src="./img/itemicons/item-4.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-4.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -323,7 +323,7 @@
                         </figure>
 
                         <figure class="item-card item-card-product">
-                            <img class="item-card__image" src="./img/itemicons/item-3.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-3.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -348,7 +348,7 @@
                         </figure>
 
                         <figure class="item-card item-card-product">
-                            <img class="item-card__image" src="./img/itemicons/item-14.jpg" alt="">
+                            <img class="item-card__image" src="./img/product-cards/item-14.jpg" alt="">
                             <div class="item-card__overlay">
                                 <button class="item-card__overlay_to-cart-but">
                                     <svg class="item-card__overlay_to-cart-but_svg" width="27" height="25"
@@ -377,10 +377,10 @@
         </div>
     </main>
     <aside>
-        <div class="feedback">
-            <div class="feedback-wrap wrap">
+        <div class="feedback-block">
+            <div class="feedback-block-wrap wrap">
                 <div class="opinion">
-                    <img width="97" height="97" src="./img/content/statement.png" alt="opinion statement">
+                    <img width="97" height="97" src="./img/advantages-block/statement.png" alt="opinion statement">
                     <p class="opinion-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                             class="opinion-italic">a pulvinar purus
                             condimentum</span>“</p>
