--- a/registration.html
+++ b/registration.html
@@ -278,10 +278,10 @@
         </div>
     </main>
     <aside>
-        <div class="feedback">
-            <div class="feedback-wrap wrap">
+        <div class="feedback-block">
+            <div class="feedback-block-wrap wrap">
                 <div class="opinion">
-                    <img width="97" height="97" src="./img/content/statement.png" alt="opinion statement">
+                    <img width="97" height="97" src="./img/advantages-block/statement.png" alt="opinion statement">
                     <p class="opinion-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                             class="opinion-italic">a pulvinar purus
                             condimentum</span>“</p>
